{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 27,
  "lineage": "963291ef-e66c-525a-ea21-ccbf62a4bcee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04c0f84704f23ebaf",
            "arn": "arn:aws:ec2:us-east-1:183631302489:elastic-ip/eipalloc-04c0f84704f23ebaf",
            "association_id": "eipassoc-01830befdf02afcfd",
            "domain": "vpc",
            "id": "eipalloc-04c0f84704f23ebaf",
            "instance": "i-0dff793caa496712d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-043ff259b8924b56a",
            "private_dns": "ip-10-0-1-175.ec2.internal",
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-44-199-47-227.compute-1.amazonaws.com",
            "public_ip": "44.199.47.227",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.nw-interface1",
            "aws_security_group.WebTrafficSG",
            "aws_subnet.AppSubnet1",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-003f66a2d14aad463",
            "arn": "arn:aws:ec2:us-east-1:183631302489:elastic-ip/eipalloc-003f66a2d14aad463",
            "association_id": "eipassoc-09a8a9b058b0569ef",
            "domain": "vpc",
            "id": "eipalloc-003f66a2d14aad463",
            "instance": "i-078346c04833f27c2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d8a8845abdf26a74",
            "private_dns": "ip-10-0-2-91.ec2.internal",
            "private_ip": "10.0.2.91",
            "public_dns": "ec2-3-224-102-127.compute-1.amazonaws.com",
            "public_ip": "3.224.102.127",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.nw-interface2",
            "aws_security_group.WebTrafficSG",
            "aws_subnet.AppSubnet2",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c68f701d8090592",
            "arn": "arn:aws:ec2:us-east-1:183631302489:instance/i-0dff793caa496712d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dff793caa496712d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-043ff259b8924b56a"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-043ff259b8924b56a",
            "private_dns": "ip-10-0-1-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-44-199-47-227.compute-1.amazonaws.com",
            "public_ip": "44.199.47.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09eae967af8c87063",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4e187d75e15caed",
            "tags": {
              "Name": "WebServer1"
            },
            "tags_all": {
              "Name": "WebServer1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f06923e1b1bc6ef"
            ]
          },
          "dependencies": [
            "aws_network_interface.nw-interface1",
            "aws_security_group.WebTrafficSG",
            "aws_subnet.AppSubnet1",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c68f701d8090592",
            "arn": "arn:aws:ec2:us-east-1:183631302489:instance/i-078346c04833f27c2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-078346c04833f27c2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d8a8845abdf26a74"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d8a8845abdf26a74",
            "private_dns": "ip-10-0-2-91.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.91",
            "public_dns": "ec2-3-224-102-127.compute-1.amazonaws.com",
            "public_ip": "3.224.102.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-000011a1882180c18",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc73748c1692dcb8",
            "tags": {
              "Name": "WebServer2"
            },
            "tags_all": {
              "Name": "WebServer2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07f06923e1b1bc6ef"
            ]
          },
          "dependencies": [
            "aws_network_interface.nw-interface2",
            "aws_security_group.WebTrafficSG",
            "aws_subnet.AppSubnet2",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "AppIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183631302489:internet-gateway/igw-05ac5f0b9886e6705",
            "id": "igw-05ac5f0b9886e6705",
            "owner_id": "183631302489",
            "tags": {
              "Name": "AppInternetGateway"
            },
            "tags_all": {
              "Name": "AppInternetGateway"
            },
            "vpc_id": "vpc-09b1b44b67f75bfbf"
          },
          "dependencies": [
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nw-interface1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183631302489:network-interface/eni-043ff259b8924b56a",
            "attachment": [
              {
                "attachment_id": "eni-attach-08d8e2539a6b2f2d9",
                "device_index": 0,
                "instance": "i-0dff793caa496712d"
              }
            ],
            "id": "eni-043ff259b8924b56a",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:68:70:51:aa:6f",
            "owner_id": "183631302489",
            "private_dns_name": "ip-10-0-1-175.ec2.internal",
            "private_ip": "10.0.1.175",
            "private_ip_list": [
              "10.0.1.175"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.175"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07f06923e1b1bc6ef"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e4e187d75e15caed",
            "tags": {
              "Name": "nw-interface1"
            },
            "tags_all": {
              "Name": "nw-interface1"
            }
          },
          "dependencies": [
            "aws_security_group.WebTrafficSG",
            "aws_subnet.AppSubnet1",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nw-interface2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183631302489:network-interface/eni-0d8a8845abdf26a74",
            "attachment": [
              {
                "attachment_id": "eni-attach-0d022f6b22a1c4d8c",
                "device_index": 0,
                "instance": "i-078346c04833f27c2"
              }
            ],
            "id": "eni-0d8a8845abdf26a74",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:a5:72:49:cc:1d",
            "owner_id": "183631302489",
            "private_dns_name": "ip-10-0-2-91.ec2.internal",
            "private_ip": "10.0.2.91",
            "private_ip_list": [
              "10.0.2.91"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.2.91"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07f06923e1b1bc6ef"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc73748c1692dcb8",
            "tags": {
              "Name": "nw-interface2"
            },
            "tags_all": {
              "Name": "nw-interface2"
            }
          },
          "dependencies": [
            "aws_security_group.WebTrafficSG",
            "aws_subnet.AppSubnet2",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05ac5f0b9886e6705",
            "id": "r-rtb-0b6950894dcf96f1c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6950894dcf96f1c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.AppIGW",
            "aws_route_table.AppRouteTable",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "AppRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183631302489:route-table/rtb-0b6950894dcf96f1c",
            "id": "rtb-0b6950894dcf96f1c",
            "owner_id": "183631302489",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ac5f0b9886e6705",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AppRouteTable"
            },
            "tags_all": {
              "Name": "AppRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b1b44b67f75bfbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AppSubnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a9de14288b2f576",
            "route_table_id": "rtb-0b6950894dcf96f1c",
            "subnet_id": "subnet-0e4e187d75e15caed"
          },
          "dependencies": [
            "aws_route_table.AppRouteTable",
            "aws_subnet.AppSubnet1",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "AppSubnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec22355e71fb583f",
            "route_table_id": "rtb-0b6950894dcf96f1c",
            "subnet_id": "subnet-0cc73748c1692dcb8"
          },
          "dependencies": [
            "aws_route_table.AppRouteTable",
            "aws_subnet.AppSubnet2",
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebTrafficSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183631302489:security-group/sg-07f06923e1b1bc6ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f06923e1b1bc6ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebTrafficSG",
            "name_prefix": "",
            "owner_id": "183631302489",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WebTrafficSG"
            },
            "tags_all": {
              "Name": "WebTrafficSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b1b44b67f75bfbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AppSubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183631302489:subnet/subnet-0e4e187d75e15caed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e4e187d75e15caed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631302489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AppSubnet1"
            },
            "tags_all": {
              "Name": "AppSubnet1"
            },
            "vpc_id": "vpc-09b1b44b67f75bfbf"
          },
          "dependencies": [
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "AppSubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183631302489:subnet/subnet-0cc73748c1692dcb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc73748c1692dcb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "183631302489",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AppSubnet2"
            },
            "tags_all": {
              "Name": "AppSubnet2"
            },
            "vpc_id": "vpc-09b1b44b67f75bfbf"
          },
          "dependencies": [
            "aws_vpc.AppVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "AppVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183631302489:vpc/vpc-09b1b44b67f75bfbf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d53d30d34a8084a4",
            "default_route_table_id": "rtb-0e5ca40f2da234aba",
            "default_security_group_id": "sg-00cc43b7b1430f781",
            "dhcp_options_id": "dopt-0f1176d5dec7d8274",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09b1b44b67f75bfbf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5ca40f2da234aba",
            "owner_id": "183631302489",
            "tags": {
              "Name": "AppVPC"
            },
            "tags_all": {
              "Name": "AppVPC"
            }
          }
        }
      ]
    }
  ]
}